--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Güray Dağ Machine Learning Project
-description: Bookmark this to keep an eye on my project updates!
+description: Machine Learning Project for Machine Learning Class YZM 3226.
