--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "14.2.1",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   }
 }
