--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gray-matter": "^4.0.3",
     "next": "14.2.1",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
