--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^14.1.0",
-    "marked": "^12.0.2",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   }
