--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "got": "^14.4.1",
     "gray-matter": "^4.0.3",
     "next": "^14.2.5",
     "react": "^18.3.1",
