--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "remark-images": "^4.0.0"
+    "remark-images": "^4.0.0",
+    "yarn": "^1.22.22"
   }
 }
